<resources>
    <string name="app_name">newAldros</string>
    <string name="Aldros">Aldros</string>
    <string name="login">login</string>
    <string name="create_new_account">Create new account</string>
    <string name="ravid_nadav_evil_incorporated"><![CDATA[Ravid & Nadav evil incorporated]]></string>
    <string name="login_LoginPage">Login</string>
    <string name="gmail_LoginPage">Gmail</string>
    <string name="password_LoginPage">Password</string>
    <string name="loginB_LoginPage">Login</string>
    <string name="forgot_password_LoginPage">Forgot password?</string>
    <string name="create_new_accunt_T_CreateNewAccountPage">Create new accunt</string>
    <string name="gmail_CreateNewAccountPage">Gmail</string>
    <string name="user_name_CreateNewAccoutPage">User name</string>
    <string name="password_CreateNewAccountPage">Password</string>
    <string name="verify_password_CreateNewAccountPage">Verify password</string>
    <string name="create_CreateNewAccountPage">Create New  Account</string>
    <string name="display_name_CreateNewAccoutPage">Display name</string>
    <string name="popaye">Popaye</string>
    <string name="all_safe">All Safe</string>
    <string name="settings">Settings</string>
    <string name="enter_the_verification_code_you_got_on_gmail_VerifyCodeCreateAccountPage">Enter the verification code you got on Gmail</string>
    <string name="enter_the_code_received_on_gmail">Enter the code received on Gmail</string>
    <string name="code_EnterCodeCreateAccountPage">Code</string>
    <string name="verify_EnterCodeCreateAccountPage">Verify</string>
    <string name="allow_permissions">Allow permissions</string>
    <string name="i_accept_the_terms_of_service_and_acknowledge_my_information_will_be_used_by_evil_staff">I accept the terms of service and acknowledge my information will be used by evil staff</string>
    <string name="forgot_password_page_please_enter_you_gmail">Forgot password page - please enter you Gmail</string>
    <string name="gmail_ForgotPasswordPage">Gmail</string>
    <string name="send_verification_gmail_ForgotPasswordPage">Send verification Gmail</string>
    <string name="code_EnterCodeForgotPasswordPage">Code</string>
    <string name="verify_EnterCodeForgotPasswordPage">Verify</string>
    <string name="enter_new_password_ResetPasswordPage">Enter new password</string>
    <string name="password_ResetPasswordPage">Password</string>
    <string name="login_ResetPasswordPage">Login</string>
    <string name="verify_password_ResetPasswordPage">Verify Password</string>
    <string name="car_coming_fast">car_coming_fast</string>
    <string name="walkerontheroad">WalkerOnTheRoad</string>
    <string name="after_clicking_the_link_received_on_gmail_press_the_button_to_continue">After clicking the link received on Gmail press the button to continue</string>
    <string name="press_me_to_continue_ClickLinkCreateAccountPage">press me to continue</string>
    <string name="press_me_after_verifying_your_account_CreateNewUserPage">press me after verifying your account</string>
    <string name="blabla">blabla</string>
    <string name="allow_permissions_AllowPermissionsPage">Allow permissions</string>
    <string name="i_accept_the_terms_of_service_AllowPermissionsPage">I ACCEPT THE TERMS OF SERVICE</string>
    <string name="i_accept_the_terms_of_service_and_allow_all_permissions_AllowPermissionsPage">I accept the terms of service and allow all permissions</string>
    <string name="back">Back</string>
    <string name="remember_me_LoginPage">Remember Me</string>
    <string name="logout__Settings">LogOut</string>
    <string name="we_need_gps_for_the_app_to_work_AllowPermissionsPage">We need GPS for the app to work</string>
    <string name="i_didnt_got_mail_send_another_one_ClickLinkCreateAccountPage">i didnt got mail send another one</string>
    <string name="didn_t_got_link_on_gmail_ClickLinkCreateAccountPage">Didn\'t got link on Gmail?</string>
    <string name="please_enter_your_gmail_again_EnterGmailAgainPage">please Enter your Gmail Again</string>
    <string name="verify_gmail_EnterGmailAgainPage">Verify Gmail</string>
    <string name="send_new_link_EnterGmailAgainPage">Send new link</string>
    <string name="gmail_EnterGmailAgainPage">Gmail</string>
    <string name="enter_gmail_UpdateGmailPage">Enter Gmail</string>
    <string name="note_your_account_will_be_registered_on_the_mail_you_will_enter_now_UpdateGmailPage">Note: your account will be registered on the mail you will enter now</string>
    <string name="send_verification_link_UpdateGmailPage">Send verification link</string>
    <string name="settings_SettingsPage">Settings</string>
    <string name="change_gmail__SettingsPage">Change Gmail</string>
    <string name="change_password_SettingsPage">Change Password</string>
    <string name="continue_UpdatePasswordPage">Continue</string>
    <string name="note_your_account_will_be_registered_with_the_password_you_will_enter_now_UpdatePasswordPage">Note: your account will be registered with the password you will enter now</string>
    <string name="update_password_UpdatePasswordPage">Update Password</string>
    <string name="new_password_UpdatePasswordPage">New Password</string>
    <string name="verify_new_password_UpdatePasswordPage">Verify new Password</string>
    <string name="old_password_UpdatePasswordPage">Old Password</string>
    <string name="delete_account_SettingsPage">Delete Account</string>
    <string name="not_interesting_SettingsPage">not interesting</string>
    <string name="change_displayname_SettingsPage">Change DisplayName</string>
    <string name="no_SettingsPage">No</string>
    <string name="yes_SettingsPage">Yes</string>
    <string name="are_you_sure_SettingsPage">Are you sure?</string>
    <string name="touch_the_pic_to_see_the_term_of_service_AllowPermissionsPage">(Touch the pic to see the term of service)</string>
    <string name="change_displayname_ChangeDisplayNamePage">Change DisplayName</string>
    <string name="note_your_displayname_will_now_be_the_one_you_will_enter_down_below_ChangeDisplayNamePage">Note: Your DisplayName will now be the one you will enter down below</string>
    <string name="new_displayname_ChangeDisplayNamePage">New DisplayName</string>
    <string name="verify_displayname_ChangeDisplayNamePage">Verify DisplayName</string>
    <string name="confirm_ChangeDisplayNamePage">Confirm</string>
    <string name="vibrate_WalkerOnTheRoad">Vibrate</string>
    <string name="send_notification__WalkerOnTheRoad">Send Notification</string>
    <string name="walker_page_PopayePage">Walker Page</string>
    <string name="password_UpdateGmailPage">Password</string>
    <string name="sound_WalkerOnTheRoad">Sound</string>
    <string name="this_will_bw_the_gmail_SettingsPage">this will bw the Gmail</string>
    <string name="this_will_be_the_displayname_SettingsPage">this will be the DisplayName</string>
    <string name="change_alarm_SettingsPage">Change Alarm</string>
    <string name="change_alarm_ChangeAlarmPage">Change Alarm</string>
    <string name="change_alarm2_ChangeAlarmPage">Change Alarm</string>
    <string name="warning_ChangeAlarmPage">Warning</string>
    <string name="theJigIsUp_ChangeAlarmPage">the Jig Is Up</string>
    <string name="o_d_ChangeAlarmPage">O.D</string>
    <string name="moonlight_sonata_ChangeAlarmPage">Moonlight Sonata</string>
    <string name="i_can_do_what_ever_i_want_ChangeAlarmPage">I can Do What Ever I Want</string>
    <string name="hip_to_be_scared_ChangeAlarmPage">Hip To Be Scared</string>
    <string name="hail_to_the_king_ChangeAlarmPage">Hail To The King</string>
    <string name="funeral_derangement_ChangeAlarmPage">Funeral Derangement</string>
    <string name="eyeless_ChangeAlarmPage">Eyeless</string>
    <string name="critical_acclaim_start_ChangeAlarmPage">Critical Acclaim Start</string>
    <string name="critical_acclaim_solo_ChangeAlarmPage">Critical Acclaim Solo</string>
    <string name="american_psycho_last_scene_ChangeAlarmPage">American Psycho Last Scene</string>
    <string name="murder_train_ChangeAlarmPage">Murder Train</string>
    <string name="latitude_PopayePage">latitude</string>
    <string name="longitude_PopayePage">longitude</string>
    <string name="speed_PopayePage">speed</string>
    <string name="acceleration_PopayePage">acceleration</string>
    <string name="my_car_location_PopayePage">My Car Location</string>
    <string name="current_car_location_MyCarLocationPage">Current car location</string>
    <string name="update_car_location_MyCarLocationPage">Update car location</string>
    <string name="location_MyCarLocationPage">Location:</string>
    <string name="delete_car_location_MyCarLocationPage">Delete car location</string>
    <string name="stop_sound_WalkerOnTheRoad">Stop Sound</string>
    <string name="stop_vibrate_WalkerOnTheRoad">Stop Vibrate</string>
    <string name="rotation_PopayePage">rotation</string>
    <string name="angle_PopayePage">angle</string>
    <string name="gmail_SettingsPage">Gmail:</string>
    <string name="displayname_SettingsPage">DisplayName</string>
    <string name="adress_PopayePage">Adress:</string>
    <string name="address_PopayePage">Address:</string>
    <string name="direct_me_to_my_car_MyCarLocationPage">Direct me to my car</string>
    <string name="direct_me_to_my_car_in_app_MyCarLocationPage">direct me to my car in app</string>
    <string name="direct_me_to_my_car_in_maps_MyCarLocationPage">Direct me to my car in maps</string>
    <string name="direct_me_to_my_car_in_app_MyCarLocationPage2">Direct me to my car in app</string>
    <string name="activity_reco">activity reco</string>
    <string name="activity_in_vehicle">Activity:\nIn\nvehicle</string>
    <string name="activity_on_bicycle">Activity:\nOn\nbicycle</string>
    <string name="activity_on_foot">Activity:\nOn\nfoot</string>
    <string name="activity_running">Activity:\nRunning</string>
    <string name="activity_still">Activity:\nStill</string>
    <string name="activity_walking">Activity:\nWalking</string>
    <string name="activity_unknown">Activity:\nUnknown</string>
    <string name="blablobli">blablobli</string>
    <string name="activity_PopayePage">Activity</string>
    <string name="confidence__PopayePage">Confidence</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="car_page_PopayePage">Car Page</string>
    <string name="angle2_PopayePage">angle</string>
</resources>