<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PopayePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Pic_PopayePage"
            android:layout_width="237dp"
            android:layout_height="302dp"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="99dp"
            android:contentDescription="@string/popaye"
            app:srcCompat="@drawable/popaye"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="16dp" />


        <ImageView
            android:id="@+id/Settings_PopayePage"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-270dp"
            android:layout_marginEnd="99dp"
            android:layout_marginBottom="0dp"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_settings_24" />

        <Button
            android:id="@+id/MyCarLocation_PopayePage"
            android:layout_width="142dp"
            android:layout_height="63dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="99dp"
            android:layout_marginTop="20dp"
            android:text="@string/my_car_location_PopayePage"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_activity"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="133dp"
            android:layout_marginBottom="0dp"
            android:text="@string/activity_PopayePage"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/img_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_tracking" />

        <TextView
            android:id="@+id/txt_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="154dp"
            android:layout_marginBottom="0dp"
            android:text="@string/confidence__PopayePage"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_tracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/Text_PopayePage"
            android:layout_width="398dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:text="@string/all_safe"
            android:textColor="@color/purple_500"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Address_PopayePage"
            android:layout_width="400dp"
            android:layout_height="77dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="228dp"
            android:layout_marginBottom="0dp"
            android:text="@string/address_PopayePage"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/latitude_PopayePage"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="0dp"
            android:text="@string/latitude_PopayePage"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/longitude_PopayePage"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="0dp"
            android:text="@string/longitude_PopayePage"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/speed_PopayePage"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="0dp"
            android:text="@string/speed_PopayePage"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/acceleration_PopayePage"
            android:layout_width="400dp"
            android:layout_height="127dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="0dp"
            android:text="@string/acceleration_PopayePage"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_start_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="231dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="0dp"
            android:text="@string/start_tracking"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_stop_tracking"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_stop_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="-50dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="0dp"
            android:text="@string/stop_tracking"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_start_tracking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/angle_PopayePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="154dp"
            android:layout_marginBottom="0dp"
            android:text="@string/angle2_PopayePage"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_tracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/WalkerPage_PopayePage"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="0dp"
            android:text="@string/walker_page_PopayePage"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/CarPage_PopayePage"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="0dp"
            android:text="@string/car_page_PopayePage"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </LinearLayout>
</ScrollView>