<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EC1C24"
    tools:context=".WalkerOnTheRoad">

    <ImageView
        android:id="@+id/Pic_WalkerOnTheRoad"
        android:layout_width="373dp"
        android:layout_height="639dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/walkerontheroad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic_9" />

    <Button
        android:id="@+id/Sound_WalkerOnTheRoad"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="473dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="192dp"
        android:text="@string/sound_WalkerOnTheRoad"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StopSound_WalkerOnTheRoad"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="473dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="192dp"
        android:text="@string/stop_sound_WalkerOnTheRoad"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/Vibrate_WalkerOnTheRoad"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="213dp"
        android:layout_marginTop="561dp"
        android:layout_marginBottom="87dp"
        android:text="@string/vibrate_WalkerOnTheRoad"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StopVibrate_WalkerOnTheRoad"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="561dp"
        android:layout_marginBottom="87dp"
        android:text="@string/stop_vibrate_WalkerOnTheRoad"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SendNotification_WalkerOnTheRoad"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/send_notification__WalkerOnTheRoad"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>